--- a/Logstash/Apache/apache.conf
+++ b/Logstash/Apache/apache.conf
@@ -20,11 +20,18 @@ patterns_dir => ["./grok-patterns"]
 
 match => { 
 
-"message" => ["%{COMMONAPACHELOG}"] 
+"message" => ["%{COMBINEDAPACHELOG}+%{GREEDYDATA:extra_fields}"]
 
 } 
 
+
 }
+
+mutate {
+convert => ["response", "integer"]
+convert => ["bytes", "integer"]
+}
+
 }
 
 output{ 
@@ -32,6 +39,8 @@ output{
 elasticsearch{ 
 
 hosts => ["127.0.0.1:9200"] 
+
+index => "apache-%{+YYYY.MM.dd}"
 
 } 
 
