--- a/Logstash/Postfix/postfix.conf
+++ b/Logstash/Postfix/postfix.conf
@@ -22,5 +22,12 @@ filter {
 }
 
 output{
+    elasticsearch{ 
+
+        hosts => ["127.0.0.1:9200"] 
+
+        index => "apache-%{+YYYY.MM.dd}"
+
+    } 
     stdout {}
 }
