--- a/Prometheus/Prometheus/Rules/rules.yml
+++ b/Prometheus/Prometheus/Rules/rules.yml
@@ -1,13 +1,45 @@
 groups:
-  - name: example
+  - name: Disponibilidad de Exportadores
     rules:
     - alert: InstanceDown
       expr: up == 0
-      for: 20s
-  - name: mysql
+      for: 2m
+  - name: MySQL
     rules:
-    - alert: Aborted Connections
+    - alert: Conexiones abortadas
       expr: rate(mysql_global_status_aborted_connects[1m]) > 0
       for: 60s
-
-#irate(mysql_global_status_aborted_connects[5m])
+    - alert: Disponibilidad de MySQL
+      expr: mysql_up == 0
+      for: 60s
+  - name: Apache
+    rules:
+    - alert: Disponibilidad de Apache HTTP
+      expr: apache_up == 0
+      for: 60s
+  - name: Windows
+    rules:
+    - alert: HostHighCpuLoad
+      expr: 100 - (avg by (instance) (rate(windows_cpu_time_total{mode="idle"}[1m])*100)) > 80
+      for: 2m
+      labels:
+        severity: warning
+      annotations:
+        summary: Host high CPU load (instance {{ $labels.instance }})
+        description: "CPU load is > 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+    - alert: MemoryUsage
+      expr: 100 - ((windows_os_physical_memory_free_bytes / windows_cs_physical_memory_bytes) * 100) > 80
+      for: 2m
+      labels:
+        severity: warning
+      annotations:
+        summary: Windows memory Usage (instance {{ $labels.instance }})
+        description: "Memory usage is more than 90%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+    - alert: DiskSpaceUsage
+      expr: 100.0 - 100 * ((windows_logical_disk_free_bytes / 1024 / 1024 ) / (windows_logical_disk_size_bytes / 1024 / 1024)) > 80
+      for: 2m
+      labels:
+        severity: critical
+      annotations:
+        summary: Windows disk Space Usage (instance {{ $labels.instance }})
+        description: "Disk usage is more than 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
